welcome.lessons.welcome.array.search.IndexOfValue.scala.error
indexOfValue:2: error: not found: value tableau
  var len = tableau.length;
            ^indexOfValue:5: error: type mismatch;
 found   : Boolean(true)
 required: Int
      return true
             ^indexOfValue:8: error: type mismatch;
 found   : Boolean(false)
 required: Int
  return false
         ^