welcome.lessons.welcome.array.search.IndexOfValue.scala.code
def indexOfValue(nums:Array[Int] ,lookingFor:Int): Int = {
  var len = tableau.length;
  for (i<-0 to len-1){
    if (nums(i)==lookingFor){
      return true
    }
  }
  return false
}